fdo#72420 Startcenter: help button point to local/wiki help, ui part

Change-Id: I7ac4b51868d1a5828c810b1ac629d5a56ffb6f50
(cherry picked from commit 55fcca64a7d006f8cb10268fd2e1e09b1618a800)